login-register done

--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -21,7 +21,7 @@
 	<!-- inject:css -->
 	<link rel="stylesheet" href="~/css/vertical-layout-light/style.css">
 	
-	<link rel="shortcut icon" href="images/favicon.png" />
+	<link rel="shortcut icon" href="~/images/favicon.png" />
 </head>
 <body>
 	<div class="container-scroller">
@@ -36,10 +36,10 @@
 				</div>
 				<div>	
 					<a class="navbar-brand brand-logo" href="index.html">
-						<img src="images/logo.svg" alt="logo" />
+						<img src="~/images/logo.svg" alt="logo" />
 					</a>
 					<a class="navbar-brand brand-logo-mini" href="index.html">
-						<img src="images/logo-mini.svg" alt="logo" />
+						<img src="~/images/logo-mini.svg" alt="logo" />
 					</a>
 				</div>
 			</div>
@@ -110,7 +110,7 @@
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item preview-item">
 								<div class="preview-thumbnail">
-									<img src="images/faces/face10.jpg" alt="image" class="img-sm profile-pic">
+									<img src="~/images/faces/face10.jpg" alt="image" class="img-sm profile-pic">
 								</div>
 								<div class="preview-item-content flex-grow py-2">
 									<p class="preview-subject ellipsis font-weight-medium text-dark">Marian Garner </p>
@@ -119,7 +119,7 @@
 							</a>
 							<a class="dropdown-item preview-item">
 								<div class="preview-thumbnail">
-									<img src="images/faces/face12.jpg" alt="image" class="img-sm profile-pic">
+									<img src="~/images/faces/face12.jpg" alt="image" class="img-sm profile-pic">
 								</div>
 								<div class="preview-item-content flex-grow py-2">
 									<p class="preview-subject ellipsis font-weight-medium text-dark">David Grey </p>
@@ -128,7 +128,7 @@
 							</a>
 							<a class="dropdown-item preview-item">
 								<div class="preview-thumbnail">
-									<img src="images/faces/face1.jpg" alt="image" class="img-sm profile-pic">
+									<img src="~/images/faces/face1.jpg" alt="image" class="img-sm profile-pic">
 								</div>
 								<div class="preview-item-content flex-grow py-2">
 									<p class="preview-subject ellipsis font-weight-medium text-dark">Travis Jenkins </p>
@@ -139,11 +139,11 @@
 					</li>
 					<li class="nav-item dropdown d-none d-lg-block user-dropdown">
 						<a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="img-xs rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
+							<img class="img-xs rounded-circle" src="~/images/faces/face8.jpg" alt="Profile image">
 						</a>
 						<div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
 							<div class="dropdown-header text-center">
-								<img class="img-md rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
+								<img class="img-md rounded-circle" src="~/images/faces/face8.jpg" alt="Profile image">
 								<p class="mb-1 mt-3 font-weight-semibold">Allen Moreno</p>
 								<p class="fw-light text-muted mb-0">allenmoreno@gmail.com</p>
 							</div>
@@ -276,7 +276,7 @@
 						</div>
 						<ul class="chat-list">
 							<li class="list active">
-								<div class="profile"><img src="images/faces/face1.jpg" alt="image"><span class="online"></span></div>
+								<div class="profile"><img src="~/images/faces/face1.jpg" alt="image"><span class="online"></span></div>
 								<div class="info">
 									<p>Thomas Douglas</p>
 									<p>Available</p>
@@ -284,7 +284,7 @@
 								<small class="text-muted my-auto">19 min</small>
 							</li>
 							<li class="list">
-								<div class="profile"><img src="images/faces/face2.jpg" alt="image"><span class="offline"></span></div>
+								<div class="profile"><img src="~/images/faces/face2.jpg" alt="image"><span class="offline"></span></div>
 								<div class="info">
 									<div class="wrapper d-flex">
 										<p>Catherine</p>
@@ -295,7 +295,7 @@
 								<small class="text-muted my-auto">23 min</small>
 							</li>
 							<li class="list">
-								<div class="profile"><img src="images/faces/face3.jpg" alt="image"><span class="online"></span></div>
+								<div class="profile"><img src="~/images/faces/face3.jpg" alt="image"><span class="online"></span></div>
 								<div class="info">
 									<p>Daniel Russell</p>
 									<p>Available</p>
@@ -303,7 +303,7 @@
 								<small class="text-muted my-auto">14 min</small>
 							</li>
 							<li class="list">
-								<div class="profile"><img src="images/faces/face4.jpg" alt="image"><span class="offline"></span></div>
+								<div class="profile"><img src="~/images/faces/face4.jpg" alt="image"><span class="offline"></span></div>
 								<div class="info">
 									<p>James Richardson</p>
 									<p>Away</p>
@@ -311,7 +311,7 @@
 								<small class="text-muted my-auto">2 min</small>
 							</li>
 							<li class="list">
-								<div class="profile"><img src="images/faces/face5.jpg" alt="image"><span class="online"></span></div>
+								<div class="profile"><img src="~/images/faces/face5.jpg" alt="image"><span class="online"></span></div>
 								<div class="info">
 									<p>Madeline Kennedy</p>
 									<p>Available</p>
@@ -319,7 +319,7 @@
 								<small class="text-muted my-auto">5 min</small>
 							</li>
 							<li class="list">
-								<div class="profile"><img src="images/faces/face6.jpg" alt="image"><span class="online"></span></div>
+								<div class="profile"><img src="~/images/faces/face6.jpg" alt="image"><span class="online"></span></div>
 								<div class="info">
 									<p>Sarah Graves</p>
 									<p>Available</p>
