--- a/App_client/Views/Login/Login.cshtml
+++ b/App_client/Views/Login/Login.cshtml
@@ -5,9 +5,6 @@
 }
 
 <h1>Login</h1>
-
-<h4>LoginUser</h4>
-<hr />
 <form asp-controller="Login" asp-action="Login">
     <div class="form">
         <label>Username:</label>
@@ -17,12 +14,11 @@
         <label>Password:</label>
         <input type="password" class="form-control" asp-for="Password" />
     </div>
-
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Register" asp-action="Register">Register</a>
 </div>
 
 @section Scripts {
