--- a/App_client/Views/Login/Login.cshtml
+++ b/App_client/Views/Login/Login.cshtml
@@ -4,20 +4,31 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
-<form asp-controller="Login" asp-action="Login">
-    <div class="form">
-        <label>Username:</label>
-        <input type="text" class="form-control" asp-for="Username" />
+<h1 style="text-align:center">Login</h1>
+<div class="row">
+         <div class="col-3"></div>
+    <div class="col-md-6">
+        <form asp-controller="Login" asp-action="Login" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Username" class="control-label"></label>
+                <input asp-for="Username" class="form-control" />
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input type="password" asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group" style="text-align:center">
+                <input type="submit" value="Login" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
-    <div class="form">
-        <label>Password:</label>
-        <input type="password" class="form-control" asp-for="Password" />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+    <div class="col-3"></div>
+</div>
 
-<div>
+<div style="text-align:center">
     <a asp-controller="Register" asp-action="Register">Register</a>
 </div>
 
