--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -350,7 +350,7 @@
 						</a>
 						<div class="collapse" id="ui-basic">
 							<ul class="nav flex-column sub-menu">
-								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-action="Index" asp-controller="Product" >Buttons</a></li>
 								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
 								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
 							</ul>
@@ -460,6 +460,7 @@
 	<script src="~/js/admin/dashboard.js"></script>
 	<script src="~/js/admin/Chart.roundedBarCharts.js"></script>
 	<!-- End custom js for this page-->
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
