--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -77,19 +77,11 @@
 				<div class="container">
 					<ul class="site-menu js-clone-nav d-none d-md-block">
 						<li class="has-children">
-							<a href="index.html">Home</a>
+							<a asp-controller="Home" asp-action="Index">Home</a>
 							<ul class="dropdown">
-								<li><a href="#">Menu One</a></li>
-								<li><a href="#">Menu Two</a></li>
-								<li><a href="#">Menu Three</a></li>
-								<li class="has-children">
-									<a href="#">Sub Menu</a>
-									<ul class="dropdown">
-										<li><a href="#">Menu One</a></li>
-										<li><a href="#">Menu Two</a></li>
-										<li><a href="#">Menu Three</a></li>
-									</ul>
-								</li>
+								<li><a href="#">Women</a></li>
+								<li><a href="#">Children</a></li>
+								<li><a href="#">Men</a></li>
 							</ul>
 						</li>
 						<li class="has-children">
@@ -100,7 +92,7 @@
 								<li><a href="#">Menu Three</a></li>
 							</ul>
 						</li>
-						<li class="active"><a href="shop.html">Shop</a></li>
+						<li class="active"><a asp-controller="Product" asp-action="Index">Shop</a></li>
 						<li><a href="#">Catalogue</a></li>
 						<li><a href="#">New Arrivals</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -109,7 +101,8 @@
 			</nav>
 		</header>
 
-		<div class="container">
+			
+		<div>
 			<main role="main" class="pb-3">
 				@RenderBody()
 			</main>
