--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -101,6 +101,13 @@
 			</nav>
 		</header>
 
+		<div>
+			<ul class="site-menu js-clone-nav d-none d-md-block">
+				<li class="has-children">
+					<a asp-controller="Size" asp-action="Index">test ALL Size</a>					
+				</li>
+			</ul>
+		</div>
 			
 		<div>
 			<main role="main" class="pb-3">
