view all favoritePR

--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -106,6 +106,9 @@
 				<li class="has-children">
 					<a asp-controller="Size" asp-action="Index">test ALL Size</a>					
 				</li>
+				<li class="has-children">
+					<a asp-controller="FavoriteProducts" asp-action="Index">Test all FavoriteProducts</a>
+				</li>
 			</ul>
 		</div>
 			
