--- a/App_client/Views/Product/Index.cshtml
+++ b/App_client/Views/Product/Index.cshtml
@@ -5,7 +5,8 @@
 	var roleid = ViewBag.RoleId;
 }
 
-<div class="row mb-5 mt-5">
+<div class="container">
+	<div class="row mb-5 mt-5">
 	<div class="col-md-9 order-2">
 		<div class="row mb-5">
 
@@ -93,3 +94,5 @@
 	</div>
 </div>
 
+
+</div>
