--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -95,6 +95,16 @@
 			</nav>
 		</header>
 		<div>
+			<ul class="site-menu js-clone-nav d-none d-md-block">
+				<li class="has-children">
+					<a asp-controller="Size" asp-action="Index">test ALL Size</a>
+				</li>
+				<li class="has-children">
+					<a asp-controller="FavoriteProducts" asp-action="Index">Test all FavoriteProducts</a>
+				</li>
+			</ul>
+		</div>
+		<div>
 			<main role="main" class="pb-3">
 				@RenderBody()
 			</main>
