--- a/App_client/Areas/Admin/Views/Product/Index.cshtml
+++ b/App_client/Areas/Admin/Views/Product/Index.cshtml
@@ -2,93 +2,118 @@
 @model IEnumerable<App_Shared.ViewModels.ProductView>
 
 @{
-    ViewData["Title"] = "Index";
-    
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+	ViewData["Title"] = "Index";
+
+	Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+	List<string>
+			imageExtensions = new List<string>
+				()
+					   {
+		".png", ".jpg", ".jpeg", ".gif", ".tiff", ".pdf"
+					   };
 }
 
-<h1>Index</h1>
+<h3 style="margin-top:50px">Danh sách sản phẩm</h3>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">Tạo mới sản phẩm</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-         
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AvailableQuantity)
-            </th>
-           @* <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.Manufacturer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Likes)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-          @*  <th>
-                @Html.DisplayNameFor(model => model.ColorID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SizeID)
-            </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-      
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AvailableQuantity)
-            </td>
-         @*   <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.Manufacturer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Likes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-       @*     <td>
-                @Html.DisplayFor(modelItem => item.ColorID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SizeID)
-            </td>*@
-            <td>
-                    @Html.ActionLink("Edit", "Edit","Product", new {  id=item.Id }) |
-                @Html.ActionLink("Details", "Details","Product", new {  id=item.Id }) |
-                    @Html.ActionLink("Delete","DeleteProduct","Product", new { id=item.Id})
-            </td>
-        </tr>
-}
-    </tbody>
+<div class="container">
+	<div class="row">
+	
+		<div class="col-12">
+		<table class="table">
+	<thead>
+		<tr>
+			<th>
+			</th>
+			<th>
+				Tên sản phẩm
+			</th>
+
+			<th>
+				Giá
+			</th>
+			<th>
+				Số lượng
+			</th>
+
+			<th>
+				Nhà sản xuất
+			</th>
+			<th>
+				Trạng thái
+			</th>
+			<th>
+				Số lượng yêu thích
+			</th>
+			<th>
+				Mô tả
+			</th>
+			@*  <th>
+			@Html.DisplayNameFor(model => model.ColorID)
+			</th>
+			<th>
+			@Html.DisplayNameFor(model => model.SizeID)
+			</th>*@
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@{
+						string extension = System.IO.Path.GetExtension(item.ImageUrl);
+					}
+					@if (imageExtensions.Contains(extension.Trim()))
+					{
+						<img src="~/images/@item.ImageUrl"style="width:100px; height:100px">
+					}
+					else
+					{
+						<img src="~/images/logo.png" height="200px">
+					}
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Price)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.AvailableQuantity)
+				</td>
+
+				<td>
+					@Html.DisplayFor(modelItem => item.Manufacturer)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Status)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Likes)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Description)
+				</td>
+				@*     <td>
+			@Html.DisplayFor(modelItem => item.ColorID)
+			</td>
+			<td>
+			@Html.DisplayFor(modelItem => item.SizeID)
+			</td>*@
+				<td>
+					@Html.ActionLink("Sửa", "Edit","Product", new {  id=item.Id }) |
+					@Html.ActionLink("Details", "Details","Product", new {  id=item.Id }) |
+					@Html.ActionLink("Xóa","DeleteProduct","Product", new { id=item.Id})
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
+
+		</div>
+	</div>
+</div>
