--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -46,10 +46,9 @@
 			<div class="navbar-menu-wrapper d-flex align-items-top">
 				<ul class="navbar-nav">
 					<li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-						<h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">John Doe</span></h1>
-
-					</li>
-				</ul>
+						<h1 class="welcome-text">Good Morning</h1>
+						</li>
+					</ul>
 				<ul class="navbar-nav ms-auto">
 
 
@@ -362,7 +361,7 @@
 					<li class="nav-item">
 						<a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
 							<i class="menu-icon mdi mdi-account-circle-outline"></i>
-							<span class="menu-title">User Pages</span>
+							<span class="menu-title">Trang của người dùng</span>
 							<i class="menu-arrow"></i>
 						</a>
 						<div class="collapse" id="auth">
