--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
 							</ul>
 						</li>
 						<li class="active"><a asp-controller="Product" asp-action="Index">Shop</a></li>
-						<li><a href="#">Nam</a></li>
+						<li><a  asp-controller="Cartdetails" asp-action="Index" >Nam</a></li>
 						<li><a href="#">Trẻ con</a></li>
 						<li><a href="#">Nữ</a></li>
 						<li><a href="contact.html">Sản phẩm yêu thích</a></li>
