--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -350,10 +350,10 @@
 						<div class="collapse" id="ui-basic">
 							<ul class="nav flex-column sub-menu">
 								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-action="Index" asp-controller="Product" >Sản phẩm</a></li>
-								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Hoá đơn</a></li>
-								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Voucher</a></li>
-								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Người dùng</a></li>
-								<li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Cấp độ</a></li>
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Bill" asp-action="Index">Hoá đơn</a></li>
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Voucher" asp-action="Index">Voucher</a></li>
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="GetallUser">Người dùng</a></li>
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Rank" asp-action="Index">Cấp độ</a></li>
 								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="Index">Sản phẩm</a></li>
 
 							</ul>
