--- a/App_client/Areas/Admin/Views/Product/Edit.cshtml
+++ b/App_client/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,8 +1,11 @@
-﻿@model App_Shared.ViewModels.ProductView
+﻿@using App_Shared.Model;
+@model App_Shared.ViewModels.ProductView
 
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    var color = (ViewData["color"] as List<Colors>);
+    var size = (ViewData["size"] as List<Sizes>);
 }
 
 <h1>Edit</h1>
@@ -55,13 +58,25 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ColorID" class="control-label"></label>
-                <input asp-for="ColorID" class="form-control" />
+                <label class="control-label">Chọn màu cho sản phẩm</label>
+                <select asp-for="ColorID" class="form-control">
+                    <option value="">Select a color</option>
+                    @foreach (var item in color)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="ColorID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SizeID" class="control-label"></label>
-                <input asp-for="SizeID" class="form-control" />
+                <label class="control-label">Chọn kich cỡ cho sản phẩm</label>
+                <select asp-for="SizeID" class="form-control">
+                    <option value="">Select a Size</option>
+                    @foreach (var item in size)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="SizeID" class="text-danger"></span>
             </div>
             <div class="form-group">
