--- a/App_client/Views/FavoriteProducts/Index.cshtml
+++ b/App_client/Views/FavoriteProducts/Index.cshtml
@@ -13,37 +13,39 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AccountID)
+                AccID
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductID)
+                proID
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+               Des
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NameProduct)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PriceProduct)
+                Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AvailableQuantityProduct)
+                AvailableQuantity
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrlProduct)
+                LinkIMG
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ManufacturerProduct)
+                Manufacturer
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StatusProduct)
+                Status
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LikesProduct)
+                Likes
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DescriptionProduct)
+                DescriptionProduct
             </th>
             <th></th>
         </tr>
@@ -85,9 +87,12 @@
                 @Html.DisplayFor(modelItem => item.DescriptionProduct)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    <a asp-controller="Product" asp-action="Details" asp-route-id="@item.ProductID">Chi tiet</a>|
+                    @*<a asp-controller="FavoriteProducts" asp-action="Edit" asp-route-id="@item.Id">Sua</a>*@|
+                    <a asp-controller="FavoriteProducts" asp-action="Delete" asp-route-idproduct="@item.ProductID">Xóa</a>|
+                   @* asp-route-idacc="@item.AccountID"
+        *@
+
             </td>
         </tr>
 }
