--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -35,9 +35,7 @@
 					</button>
 				</div>
 				<div>	
-					<a class="navbar-brand brand-logo" href="index.html">
-						<img src="~/images/logo.svg" alt="logo" />
-					</a>
+					<a href="index.html" class="js-logo-clone">Shoppers</a>
 					<a class="navbar-brand brand-logo-mini" href="index.html">
 						<img src="~/images/logo-mini.svg" alt="logo" />
 					</a>
