--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -48,17 +48,15 @@
 										<li><a asp-controller="Login" asp-action="Logout"><span class="icon icon-person"></span></a></li>
 										  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
                                         <li>
-                                            <a href="cart.html" class="site-cart">
+                                            <a asp-controller="Cart" asp-action="Index" class="site-cart">
                                                 <span class="icon icon-shopping_cart"></span>
                                                 <span class="count">2</span>
                                             </a>
-                                        </li>
-                                        <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+                                        </li>      
 									</ul>
 								</div>
 							</div>
-						}
-						@if (User.IsInRole("Admin"))
+						}else if (User.IsInRole("Admin"))
 						{
 							<div class="col-6 col-md-4 order-3 order-md-3 text-right">
 								<div class="site-top-icons">
